Completed tables and fixed overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    overflow: scroll;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -86,6 +85,7 @@ ul {
     flex:1;
     font-size:1.125em;
     padding-left:5%;
+    font-weight:bolder;
 }
 
 .answer {
@@ -101,8 +101,9 @@ ul {
     margin: 25px 0;
     font-size:0.9em;
     font-family: sans-serif;
-    min-width: 400px;
+    min-width: 300px;
     box-shadow: 0 0 20px rgba(0,0,0,0.15);
+    overflow:scroll;
 }
 
 .styled-table thead tr {
